--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,29 @@
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
+
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  width: 960px;
-  height: 500px;
-  position: relative;
+  width: 1010px;
+  height: 800px;
+  text-align: left;
+  position: center;
+  padding: 20px;
+  display: table-cell;
+  vertical-align: middle;
 }
+
 
 svg {
 	width: 100%;
 	height: 100%;
 }
+
 
 path.slice{
 	stroke-width:2px;
@@ -20,3 +35,4 @@ polyline{
 	stroke-width: 2px;
 	fill: none;
 }
+
